# satademo

./: .gitignore  Cargo.toml  todo.md
examples/: ecs_test.rs
satademo_macro/: Cargo.toml
satademo_macro/src/: lib.rs
src/: commands.rs  ecs.rs  lib.rs  prelude.rs  singleton.rs
