[package]
name = "satademo"
version = "0.1.2"
edition = "2024"

[dependencies]
inventory = "0.3"
flecs_ecs = "0.2.2"
satademo_macro = { path = "./satademo_macro" }



# Дебаг профиль
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Режим для релиза
[profile.release]
lto = true
panic = "abort"
debug = false
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
