[package]
name = "satademo"
version = "0.1.2"
edition = "2024"

[dependencies]
satademo_macro = { path = "./satademo_macro" }
inventory = "0.3.24"
hecs = "0.11.0"
hashbrown = "0.17.1"



# Дебаг профиль
[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

# Режим для релиза
[profile.release]
lto = true
panic = "abort"
debug = false
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false
codegen-units = 1
strip = true
